--- a/disco.html
+++ b/disco.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><div id="sp1">
-    <img width="170px" heigt="200px" src="../disco/disco.jpeg" alt="">
-</div>
+<body>
+        <div id="sp2"> <img id="sp1" src="../disco/disco.jpeg" alt=""></div>
     <div id="sp1">
         <h1 id="imp">Mahmoud Bakir</h1>
         <p><b>Nationality :</b> Lebanese &nbsp;&nbsp;<b>Phone Number:</b> 70/336942&nbsp;&nbsp;<b>Gender:</b>Male</p>
