--- a/disco.html
+++ b/disco.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-        <div id="sp2"> <img id="sp1" src="../disco/disco.jpeg" alt=""></div>
+        <div id="sp2"> <img src="../disco/disco.jpeg" alt=""></div>
     <div id="sp1">
         <h1 id="imp">Mahmoud Bakir</h1>
         <p><b>Nationality :</b> Lebanese &nbsp;&nbsp;<b>Phone Number:</b> 70/336942&nbsp;&nbsp;<b>Gender:</b>Male</p>
